Fix color_scale_legend wrapping on mobile

--- a/anatomy/static/sass/_view.sass
+++ b/anatomy/static/sass/_view.sass
@@ -73,6 +73,8 @@
 .anatomy-image
   background-color: #fff
   .legend
+    white-space: nowrap
+    overflow-x: auto
     display: inline-block
     font-weight: bold
     margin: -5px 0 15px 0
